--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,18 +7,35 @@ body
     margin: 0;
     padding: 0;
 }
-#container
+#cabecera
 { 
-width: 70%;
-padding: 1em;
-text-align: left;
-border: 1px solid #DDD;
-margin: 0 auto;
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+
+}
+#cabecera #tangline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
 
 }
 
+#container
 
-#container h1
+{
+
+    width: 70%;
+    padding: 0;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
 {
     font-size: 20px;
 }
