--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: crimson;
     text-align: center;
-    font-family: "Arial";
+    font-family: "curiel";
     font-size: 16px;
     margin: 0;
     padding: 0;
