--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,33 +9,44 @@ body
 }
 #cabecera
 { 
-    background: red;
+    background: #33A;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
-
 }
 #cabecera #tangline
 {
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
-
 }
 
 #container
 
 {
-
-    width: 70%;
+     width: 70%;
     padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
+   "css/estilos.css" 52L, 625C
 }
 
+#container h1
 {
-    font-size: 20px;
+   font-size: 20px;
 }
+#post
+{
+   padding: 1em;
+}
+#footer
+{
+   background: #777;
+   color; white;
+   text-align: center;
+   padd: 0.5em;
+}
+
