--- a/css/estilos.css
+++ b/css/estilos.css
@@ -50,3 +50,12 @@ body
     background: white;
     padding: 1em;
 }
+#footer
+{ 
+    background: #568b37;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em 0 0.5em 2em;
+}
