cambio al tagible y color del footer :)

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -37,7 +37,7 @@ body
     width: 70%;
     padding: 0;
     text-align: left;
-    border: 1px solid #DDD;
+    border: 1px solid rgb(26, 145, 61);
     margin: 0 auto;
 }
 
